<resources>
    <string name="app_name">KubernetesClient</string>
    <string name="pod_name">Pod\'s name</string>
    <string name="info">i</string>
    <string name="placeholder">placeholder</string>
    <string name="name">Name:</string>
    <string name="uid">UID:</string>
    <string name="namespace">Namespace:</string>
    <string name="created_at">Created At:</string>
    <string name="status">Status:</string>
    <string name="protocol">Protocol:</string>
    <string name="port">Port:</string>
    <string name="targetPort">Target Port:</string>
    <string name="cpus">CPUs:</string>
    <string name="memory">Memory:</string>
    <string name="os">OS:</string>
    <string name="nodes">Nodes</string>
    <string name="services">Services</string>
    <string name="pods">Pods</string>
    <string name="there_are_no_items_for_this_namespace">There are no items for this namespace</string>

</resources>
