<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PodActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="379dp"
        android:layout_height="245dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <ImageView
                android:id="@+id/pod_name_label"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/pod"
                android:textAlignment="viewEnd" />

            <!--<TextView-->
            <!--android:id="@+id/pod_name_label"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_weight="1"-->
            <!--android:gravity="center"-->
            <!--android:text="@string/name"-->
            <!--android:textAlignment="viewEnd"-->
            <!--android:textSize="@dimen/pod_detail" />-->

            <TextView
                android:id="@+id/pod_name"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/placeholder"
                android:textAlignment="center"
                android:textSize="@dimen/pod_detail" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:id="@+id/pod_uid_label"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/uid"
                android:textAlignment="viewEnd"
                android:textSize="@dimen/pod_detail"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/pod_uid"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/placeholder"
                android:textAlignment="center"
                android:textSize="@dimen/pod_detail" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:id="@+id/pod_namespace_label"
                android:layout_width="0dp"
                android:layout_height="41dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/namespace"
                android:textAlignment="viewEnd"
                android:textSize="@dimen/pod_detail"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/pod_namespace"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/placeholder"
                android:textAlignment="center"
                android:textSize="@dimen/pod_detail" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:id="@+id/pod_createdat_label"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/created_at"
                android:textAlignment="viewEnd"
                android:textSize="@dimen/pod_detail"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/pod_createdat"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical|center"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/placeholder"
                android:textAlignment="center"
                android:textSize="@dimen/pod_detail" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:id="@+id/pod_status_label"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/status"
                android:textAlignment="viewEnd"
                android:textSize="@dimen/pod_detail"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/pod_status"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:src="@drawable/ic_launcher_background" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:id="@+id/divider2"
        android:layout_width="368dp"
        android:layout_height="3dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.029" />

</android.support.constraint.ConstraintLayout>